--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -2,15 +2,14 @@
 .app-header {
     box-shadow: 0 2px 6px 0 #0d1a2626;
     padding: 16px 50px;
-    text-align: auto;
+    text-align: center;
 }
 
 .header-nav {
     display: flex;
     justify-content: space-between;
-    align-items: auto;
+    align-items: center;
     width: 100%;
-    flex-wrap: wrap;
 }
 
 .headerRight {
@@ -135,24 +134,17 @@
     word-wrap: break-word;
 }
 
-
+/* CSS for the SearchBar */
 
 @media screen and (max-width: 650px) {
 
-    .header-nav, .headerRight, .bar{
+    .header-nav, .headerRight {
         flex-direction: column;
         justify-content: center;
-        width: auto;
-        height: auto;
-    }
-    .location, .check-in, .check-out, .accomodation {
-        width: auto;
-        height: auto;
-        padding: 10px;
-        margin: auto;
+        width: 100%;
     }
 
-    .headerButtons, .personalMenu, .bar{
+    .headerButtons, .personalMenu, .bar {
         width: 100%;
         margin-top: 10px;
         margin-right: 0;
@@ -322,5 +314,19 @@ a:hover {
     }
 
 }
+
+.search-bar-container {
+   
+    width: 40%;
+    padding: 1px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 10px; 
+    left: 43%; 
+    transform: translateX(-50%);
+}
+
 
 /* End of footer */
