--- a/web/src/components/hostdashboard/Accommodations.css
+++ b/web/src/components/hostdashboard/Accommodations.css
@@ -11,6 +11,7 @@
   display: inline-block;
   vertical-align: top;
   transition: all 0.5s ease-in-out;
+  position: relative;
 }
 
 .accocard:hover {
@@ -23,6 +24,8 @@
   aspect-ratio: 1;
   object-fit: cover;
   border-radius: 15px;
+  display: block;
+
 }
 
 .accocard-link {
@@ -41,23 +44,41 @@
 }
 
 .accocard-title {
+  width: 90%;
+  background: rgba(0, 0, 0, 0.383);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  padding: 10px;
+  border-radius: 15px;
+  text-align: center;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis; 
+  position: absolute;
+  bottom: 160px; 
+  left: 50%;
+  transform: translateX(-50%);
+  color: white;
   font-size: 18px;
   font-weight: bold;
-  margin-bottom: 10px;
-  white-space: nowrap;
-  overflow: hidden; 
-  text-overflow: ellipsis; 
-  
 }
 
 .accocard-price {
-  font-size: 16px;
+  font-size: 20px;
   color: #0D9813;
   margin-bottom: 8px;
 }
 
 .accocard-detail {
   margin-bottom: 8px;
+  width: 300px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* Aantal regels dat je wilt tonen */
+  -webkit-box-orient: vertical;  
+  /* white-space: nowrap; */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  height: 3em;
 }
 
 .accocard-specs {
@@ -81,5 +102,20 @@
 @media (max-width: 856px) {
   .accocard {
     width: 48%;
+  }
+}
+
+/* @media (max-width: 768px) {
+  .accocard-detail {
+    width: 300px;
+  }
+} */
+
+@media (max-width: 480px) {
+  .accocard-detail {
+    width: 180px;
+  }
+  .accocard-size {
+    font-size: 12px;
   }
 }
