--- a/web/src/components/hostdashboard/HostRevenueCards/RevenueOverview.css
+++ b/web/src/components/hostdashboard/HostRevenueCards/RevenueOverview.css
@@ -1,67 +1,46 @@
 /* General Card Styling */
 .ro-revenue-card {
-    background-color: white;
-    padding: 5px; /* Reduced padding */
+    padding: 5px; /* Adjusted padding for space */
     border-radius: 10px;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-    flex: 1 1 45%; /* Each card takes 45% of the width of the container */
-    min-width: 50px; /* Reduced the minimum width */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    width: 15%;
 }
 
 .ro-revenue-card:hover {
-    transform: translateY(-3px);
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+    transform: translateY(-5px); /* Lift effect on hover */
+    box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.2);
 }
 
-.ro-revenue-overview h3 { /* Adjust this based on your actual HTML tag */
-    font-size: 0.8em; /* Reduce font size to make it smaller */
-    padding: 10px;
-    text-align: center;
-    color: #333; /* Optional: adjust the color */
-    font-weight: normal;
+/* Title Styling */
+.ro-revenue-title {
+    font-size: 15px;
+    margin-bottom: 10px;
+    color: #333;
+    font-weight: 300;
 }
 
-.ro-revenue-card h4 {
-    margin-bottom: 4px; /* Reduced margin */
-    font-size: 0.5em; /* Reduced title font */
-    color: #000000;
-    font-weight: normal;
-}
-
-.ro-revenue-card p {
-    font-size: 1.0em; /* Reduced font size for the value */
+/* Value Styling */
+.ro-revenue-value {
+    font-size: 2rem;
+    margin-bottom: 20px;
     color: #003366;
-    font-weight: normal;
 }
 
-/* Container for Cards and Dashboard */
-.ro-dashboard-container {
-    display: flex;
-    justify-content: space-between;
-    gap: 10px; /* Reduced gap */
-    padding: 10px; /* Reduced padding */
-    width: 50%; /* Reduced width */
-}
-
+/* Grid for Revenue Overview Cards */
 .ro-card-grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px; /* Reduced gap */
-    justify-content: center;
+    display: Flex;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive grid */
+    gap: 20px;
+    justify-items: center;
+    padding: 20px;
     width: 100%;
 }
 
-/* Overview Section */
-.ro-revenue-overview {
-    background-color: #f6f6f7;
-    padding: 5px; /* Reduced padding */
-    border-radius: 10px;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-    width: 15%; /* Halved width */
-    margin: 0; /* Center it horizontally */
-}
-
 /* Responsive Design */
-@media (max-width < 768px) {}
+@media (max-width: 768px) {
+    .ro-revenue-card {
+        max-width: 100%;
+    }
+}
