--- a/web/src/components/landingpage/landing.module.css
+++ b/web/src/components/landingpage/landing.module.css
@@ -163,7 +163,7 @@
     font-size: 2.5rem;
     line-height: 1.2em;
     display: inline-block;
-    white-space: nowrap; 
+    white-space: nowrap;
 
 }  button {
     align-self: start;
@@ -175,11 +175,11 @@
 }
 
 .textContainer {
-    display: inline-block; 
+    display: inline-block;
     position: relative;
     height: 40px;
     overflow: hidden;
-    margin-left: 5px; 
+    margin-left: 5px;
 }
 
 .textAnimated {
@@ -223,7 +223,7 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 5%;
-    background-color: #f9f9f9;   
+    background-color: #f9f9f9;
 }
 .easyHosting_text{
     font-size: 25px;
@@ -236,12 +236,12 @@
 .steps{
     display: flex;
     flex-direction: column;
-    width: 27%;  
-    
+    width: 27%;
+
 }
 .steps h1{
     font-size: 100px;
-    
+
 }
 .steps h2{
     font-weight: bold;
@@ -249,7 +249,7 @@
 .steps h1, .steps h2, .steps p {
     margin-bottom: 0px;
     margin-top: 0px;
-}  
+}
 .whyHostText{
     width: 50%;
     margin-left: 10%;
@@ -280,17 +280,18 @@
     text-align: left;
     padding-top: 1%;
     background-color: #f9f9f9;
+    justify-content: center;
 }
 .firstSection{
-    display: flex;    
+    display: flex;
     justify-content: space-between;
 }
 .firstPicture{
     width: 50%;
 }
 .firstPicture img{
-    border-bottom-left-radius: 80% 100%; 
-    border-top-left-radius: 80% 100%; 
+    border-bottom-left-radius: 80% 100%;
+    border-top-left-radius: 80% 100%;
     height: 100%;
     width: 100%;
     object-fit: cover;
@@ -321,7 +322,7 @@
 }
 .simpleSafeCards img{
     max-width:3vw;
-    
+
 }
 .simpleSafeAll{
     display: flex;
@@ -336,7 +337,7 @@
     display: flex;
     align-items: center;
     width: 75%;
-   
+
 }
 .clientRevieuw {
     display: flex;
@@ -359,7 +360,7 @@
 
     .client_text {
         border-style: solid;
-        border-color: #003366; 
+        border-color: #003366;
         padding: 2rem;
         margin-bottom: auto;
         margin: 5px;
@@ -368,7 +369,7 @@
         flex-direction: column;
         justify-content: space-between;
         border-collapse: collapse;
-        
+
         .client_content {
             display: flex;
             align-items: center;
@@ -379,7 +380,7 @@
             border-radius: 50%;
             width: 70px;
             height: 70px;
-            margin-right: 1rem; 
+            margin-right: 1rem;
         }
 
         .client_details {
@@ -573,7 +574,7 @@
     .SecPicture{
         width: 45%;
         height: 60%;
-        
+
     }
 
     .personal__advice {
@@ -731,6 +732,6 @@
             height: auto;
             object-fit: cover;
         }
-        
+
     }
 }
