--- a/web/src/components/booking/BookingCalendar.module.css
+++ b/web/src/components/booking/BookingCalendar.module.css
@@ -131,7 +131,7 @@
         border-radius: 50%;
         z-index: -1;
     }
-    .inactive, .past {
+    .inactive, .past, .minStay {
         color: #cccccc;
     }
     .disabled {
