--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -1,14 +1,22 @@
-/* CSS for the header   */
+/* General Styling */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html,
+body {
+    width: 100%;
+    overflow-x: hidden;
+    font-family: Kanit, sans-serif;
+}
+
+/* Header Styling */
 .app-header {
     box-shadow: 0 2px 6px 0 #0d1a2626;
     padding: 20px 50px 5px 50px;
     text-align: center;
-}
-
-.trustpilot-bar {
-    display: flex;
-    justify-content: center;
-    margin-top: 2px;
 }
 
 .header-nav {
@@ -20,21 +28,18 @@
 }
 
 .headerRight {
-    float: right;
     display: flex;
     align-items: center;
 }
 
-.headerButtons, .personalMenu {
-    float: left;
+.headerButtons,
+.personalMenu {
     color: black;
     text-align: center;
     padding: 12px;
     font-size: 18px;
     border-radius: 10px;
-    margin-top: 0;
     display: inline-flex;
-    font-family: Kanit, sans-serif;
     cursor: pointer;
     width: auto;
     box-shadow: 0 0 5px hsl(0 0% 78%);
@@ -49,7 +54,8 @@
     display: flex;
 }
 
-.headerHostButton, .headerButtons {
+.headerHostButton,
+.headerButtons {
     border: none;
     background: none;
     box-shadow: none;
@@ -71,7 +77,7 @@
 }
 
 .personalMenuDropdown .personalMenuDropdownContent {
-    padding: 20px 25px 20px 25px;
+    padding: 20px 25px;
     position: absolute;
     background-color: white;
     width: auto;
@@ -93,7 +99,6 @@
     width: 100%;
     color: white;
     font-size: 16px;
-    font-family: Kanit, sans-serif;
     font-weight: 400;
     line-height: 24px;
     word-wrap: break-word;
@@ -108,7 +113,8 @@
     cursor: pointer;
 }
 
-.dropdownRegisterButton, .dropdownLogoutButton {
+.dropdownRegisterButton,
+.dropdownLogoutButton {
     margin-top: 10px;
     background-color: var(--secondary-color);
     border: none;
@@ -150,25 +156,51 @@
 .helloUsername {
     margin-bottom: 10px;
     font-size: 18px;
-    font-family: Kanit, sans-serif;
     font-weight: 400;
     line-height: 24px;
     word-wrap: break-word;
 }
 
+/* Media Queries */
+@media screen and (max-width: 1024px) {
+    .header-nav {
+        flex-wrap: nowrap;
+    }
+
+    .App,
+    .header-nav {
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+        background: white;
+        width: 100%;
+    }
+
+    .logo {
+        margin: 0 1vw 0 -4vw;
+    }
+
+    .headerRight {
+        margin-left: 3vw;
+    }
+
+    .headerButtons.headerHostButton {
+        margin-left: -15%;
+        font-size: 13px;
+    }
+
+    .personalMenu {
+        margin-left: -15%;
+    }
+}
+
 @media screen and (max-width: 768px) {
-    .trustpilot-bar {
-        margin: 0 auto 0 auto;
-        padding-bottom: 10px;
-    }
-    .trustpilot-widget {
-        display: flex;
-        justify-content: center;
-    }
     .logo {
         padding-top: 2vh;
     }
-    .header-nav, .headerRight {
+
+    .header-nav,
+    .headerRight {
         flex-direction: row;
         justify-content: center;
         width: 100%;
@@ -179,7 +211,9 @@
         margin-top: 20px;
     }
 
-    .headerButtons, .personalMenu, .Search-bar {
+    .headerButtons,
+    .personalMenu,
+    .Search-bar {
         width: 100%;
         margin-top: 10px;
         margin-right: 0;
@@ -191,7 +225,8 @@
         padding: 0;
     }
 
-    .App, .header-nav {
+    .App,
+    .header-nav {
         position: sticky;
         top: 0;
         z-index: 1000;
@@ -232,35 +267,53 @@
         align-content: center;
         margin: 4vh 0 31vh 4vw;
     }
-
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px){
-    .header-nav {
-        flex-wrap: nowrap;
-    }
-    .App, .header-nav {
-        position: sticky;
-        top: 0;
-        z-index: 1000;
-        background: white;
-        width: 100%;
-    }
-    .logo {
-        margin: 0 1vw 0 -4vw;
-    }
+@media screen and (max-width: 480px) {
+
+    .header-nav,
     .headerRight {
-        margin-left: 3vw;
+        flex-direction: column;
+        align-items: center;
     }
-    .headerButtons.headerHostButton {
-        margin-left: -15%;
-        font-size: 13px;
-    }
+
+    .headerButtons,
     .personalMenu {
-        margin-left: -15%;
+        width: 100%;
+        margin-top: 10px;
+        justify-content: center;
+    }
+
+    .personalMenuDropdown .personalMenuDropdownContent {
+        width: 90%;
+        left: 5%;
+        right: 5%;
     }
 }
 
+@media screen and (max-width: 320px) {
+
+    .header-nav,
+    .headerRight {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .headerButtons,
+    .personalMenu {
+        width: 100%;
+        margin-top: 10px;
+        justify-content: center;
+    }
+
+    .personalMenuDropdown .personalMenuDropdownContent {
+        width: 90%;
+        left: 5%;
+        right: 5%;
+    }
+}
+
+/* Footer Styling */
 .main-footer {
     background-color: #f8f8f8;
 }
@@ -275,9 +328,7 @@
 
 .footer-headers {
     color: var(--primary-color);
-    font-family: Kanit, sans-serif;
     font-size: 24px;
-    font-style: normal;
     font-weight: 400;
     line-height: 150%;
 }
@@ -290,17 +341,13 @@
 }
 
 .footer-links {
-
     color: #000;
-    font-family: Kanit, sans-serif;
     font-size: 1rem;
-    font-style: normal;
     font-weight: 300;
     line-height: 150%;
 }
 
 .footer-copyright {
-
     background-color: var(--primary-color);
     flex-shrink: 0;
     margin-top: auto;
@@ -320,9 +367,7 @@
 
 .footer-copyright-text {
     color: #fff;
-    font-family: Kanit, sans-serif;
     font-size: 16px;
-    font-style: normal;
     font-weight: 300;
     line-height: 150%;
 }
@@ -347,10 +392,7 @@
     border: 0.5px solid var(--primary-color);
 }
 
-#appstorebadge {
-    margin-top: 20px;
-}
-
+#appstorebadge,
 #playstorebadge {
     margin-top: 20px;
 }
@@ -358,7 +400,6 @@
 .footer-column ul li {
     margin: 10px 0;
     color: var(--colors-font-interactive, #0A760F);
-    font-family: Inter;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
@@ -391,14 +432,14 @@ a:hover {
 }
 
 @media screen and (max-width: 830px) {
-
     .footer-content {
         display: flex;
         flex-direction: column;
         justify-content: center;
     }
 
-    .footer-section, .footer-endsection {
+    .footer-section,
+    .footer-endsection {
         margin: 0;
         border-top: 1px solid var(--primary-color);
         margin-bottom: 20px;
