--- a/web/src/features/guestdashboard/guestdashboard.css
+++ b/web/src/features/guestdashboard/guestdashboard.css
@@ -1,19 +1,10 @@
-/* Root Variables */
-:root {
-    --primary-color: #0D9813;
-    --secondary-color: #6CD46F;
-    --text-color: #333;
-    --bg-light: #fff;
-    --border-radius: 15px;
-    --shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-/* General Layout */
 .container {
     display: flex;
     flex-direction: column;
     width: 90%;
-    margin: 30px auto;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .dashboards {
@@ -22,6 +13,185 @@
     gap: 5%;
 }
 
+.dashboard {
+    display: grid;
+    grid-template-columns: 250px auto;
+}
+
+.Dashboard_h2 {
+    position: absolute;
+    top: 13%;
+    left: 5%;
+    font-size: 1.6rem;
+}
+
+.dashboardSections {
+    margin-left: 100px;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+}
+
+.wijzers {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    cursor: pointer;
+    margin-bottom: 15px;
+    align-items: center;
+    width: 200px;
+    border: 0.1px solid black;
+    border-radius: 15px;
+    padding: 5px;
+    box-sizing: border-box;
+    transition: all 0.3s ease;
+    text-align: center;
+    height: 8vh;
+    padding-left: 1vh;
+    font-size: 1rem;
+    padding-right: 1rem;
+    justify-content: flex-start;
+}
+
+.wijzers img {
+    object-fit: cover;
+}
+
+.wijzers:hover {
+    background-color: var(--primary-color);
+    transition: .3s;
+    color: white;
+}
+
+.wijzers.active {
+    background-color: var(--primary-color);
+    color: white;
+}
+
+.wijzers.active p {
+    color: white;
+}
+
+.disabled:hover {
+    cursor: not-allowed;
+    box-shadow: none;
+    border: 0.5px solid black;
+}
+
+.contentContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.reviewColumn {
+    width: 48%;
+    height: auto;
+    margin: 10px;
+    min-width: 155px;
+    display: flex;
+    flex-direction: column;
+}
+
+.reviewBox {
+    margin-right: 5px;
+    margin-top: 10px;
+    padding: 10px;
+    height: 100%;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 10px;
+    flex-wrap: wrap;
+}
+
+.review-tab {
+    display: flex;
+    flex-direction: column;
+    border: 2px;
+    border-radius: 15px;
+    margin: 5%;
+    animation: fade-up 1s;
+    padding: 12px;
+}
+
+.review-tab:hover {
+    box-shadow: 4px 4px #0D9813;
+    transition: .3s;
+}
+
+.review-date {
+    color: #0D9813;
+}
+
+.review-delete {
+    align-self: end;
+    width: 40px;
+    height: 40px;
+    box-shadow: none;
+    padding: 0;
+    border: none;
+    background-color: white;
+}
+
+.review-delete:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+}
+
+.review-alert {
+    margin: 10%;
+}
+
+.cross {
+    width: 30px;
+    height: 30px;
+}
+
+@keyframes fade-up {
+    0% {
+        opacity: 0;
+        transform: translateY(30px) scale(0.9);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px) scale(1);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .dashboardSections {
+        visibility: hidden;
+        width: 0;
+        height: 0;
+    }
+}
+
+@media screen and (max-width: 830px) {
+    .dashboards {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .dashboard {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .wijzers {
+        width: 90%;
+    }
+}
+
+.button i {
+    margin-right: 10px;
+    color: #888;
+}
+
+
 .content {
     padding: 20px;
     display: flex;
@@ -29,11 +199,67 @@
     gap: 15%;
 }
 
+.leftContent {
+    height: 360px;
+}
+
+.bookingBox {
+    height: 60%;
+    margin-bottom: 20px;
+    overflow: auto;
+}
+
+.Booking_place {
+    margin-top: 79px;
+    margin-left: 138px;
+}
+
+.messageBoxes {
+    height: 40%;
+    overflow: auto;
+}
+
+.viewAllBooking {
+    color: #0D9813;
+    position: absolute;
+    top: 16.1%;
+    left: 30%;
+}
+
+.bookingBox,
+.messageBox {
+    background-color: #fff;
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    width: 60%;
+}
+
+.bookingBox img {
+    width: 20%;
+    height: auto;
+    border-radius: 15px;
+    margin-top: 10px;
+}
+
+.messageBox button {
+    align-self: flex-end;
+    padding: 10px 20px;
+    font-size: 14px;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
 .personalInfoContent {
+
+    flex-direction: column;
+    margin-left: 1px;
+    width: 100%;
     flex: 1;
     padding: 20px;
-    display: flex;
-    flex-direction: column;
+
 }
 
 .accomodation-side {
@@ -42,15 +268,20 @@
 }
 
 .infoBox {
-    background-color: var(--bg-light);
-    border-radius: var(--border-radius);
+    background-color: #fff;
+    border-radius: 15px;
     padding: 20px;
-    box-shadow: var(--shadow);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     margin-bottom: 10px;
     display: flex;
     align-items: center;
-    width: 0px;
+    width: auto;
     gap: 10px;
+}
+
+.infoBox i {
+    margin-right: 10px;
+    color: #0A760F;
 }
 
 .infoBox span {
@@ -64,33 +295,47 @@
     font-weight: 300;
 }
 
-.guest-edit-input {
-    font-size: 1.3rem;
-    font-weight: 300;
-    margin-left: -2%;
+.button.last-button {
+    margin-top: 60px;
 }
 
-/* Edit Icon */
+.icon {
+    width: 24px;
+    height: 24px;
+    object-fit: contain;
+    margin-right: 10px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    padding: 5px;
+    border-radius: 12px;
+    background-color: #f9f9f9;
+}
+
 .personal-info-header {
     display: flex;
     align-items: center;
     gap: 10px;
+    /* Ruimte tussen de koptekst en de bewerkknop */
 }
 
 .edit-icon-background {
-    background-color: var(--primary-color);
-    border-radius: var(--border-radius);
+    background-color: #0D9813;
+    border-radius: 15px;
+    padding: 0.4rem;
+    margin-left: 5%;
     width: 2rem;
     height: 2rem;
+    text-align: center;
+    cursor: pointer;
+
     display: flex;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
     position: relative;
 }
 
 .edit-icon-background:hover {
-    background-color: var(--secondary-color);
+    background-color: #6CD46F;
 }
 
 .guest-edit-icon {
@@ -103,65 +348,41 @@
     object-fit: contain;
 }
 
-/* Buttons and Links */
-.viewAllBooking {
-    color: var(--primary-color);
-    text-decoration: none;
+.guest-check-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 2.5rem;
+    height: 2.5rem;
+    object-fit: contain;
 }
 
-.viewAllBooking:hover {
-    text-decoration: underline;
+.guest-edit-input {
+    font-size: 1.3rem;
+    font-weight: 300;
+    margin-left: -2%;
 }
 
-/* Responsive Design */
-@media screen and (max-width: 830px) {
-    .dashboards {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+@media (max-width: 480px) {
+    .reviewColumn {
+        width: 100%;
 
-    .content {
-        flex-direction: column;
-        gap: 20px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .content {
-        flex-direction: column;
-        gap: 15px;
-    }
-
-    .infoBox {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .infoBox span {
-        margin-bottom: 5px;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .dashboards {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-    }
-
-    .content {
-        padding: 10px;
-        flex-direction: column;
-        gap: 10px;
+        h2.review-header {
+            font-size: 1.5em;
+        }
     }
 
     .infoBox {
         padding: 10px;
+        font-size: 0.8em;
+        width: 90%;
+        flex-wrap: wrap;
     }
 
-    .viewAllBooking {
-        font-size: 0.9rem;
-        text-align: center;
+    .dashboardSections {
+        visibility: hidden;
+        width: 0;
+        height: 0;
     }
 }
