--- a/web/src/features/hostonboarding/styles/onboardingHost.scss
+++ b/web/src/features/hostonboarding/styles/onboardingHost.scss
@@ -7,8 +7,7 @@ $input-time-gray: #2a2c2d;
 $white: #fff;
 $off-white: #f0f0f0;
 
-.onboardingHostDiv {
-
+.onboarding-host-div {
 
   /* Headings */
   h2 {
