--- a/web/src/styles/sass/base/header.scss
+++ b/web/src/styles/sass/base/header.scss
@@ -72,7 +72,7 @@ $font-size-medium: 18px;
     background-color: white;
     width: auto;
     min-width: 240px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
     top: calc(100% + 5px);
     right: 0;
@@ -86,7 +86,6 @@ $font-size-medium: 18px;
       gap: 10px;
       display: inline-flex;
       width: 100%;
-      color: white;
       font-size: 16px;
       font-weight: 400;
       line-height: 24px;
