--- a/web/src/pages/home/homePage.css
+++ b/web/src/pages/home/homePage.css
@@ -59,6 +59,20 @@ body.hide-header .app-header {
   flex-wrap: wrap;
 }
 
+.popup-box {
+  position: absolute;
+  background: white;
+  border: 1px solid #ddd;
+  padding: 8px;
+  border-radius: 5px;
+  top: 100%;
+  left: 0;
+  width: 250px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+  margin-top: 1rem;
+}
+
 .domits-trendingContainer>div {
   width: 200px;
   height: 150px;
